Fixed some bugs and upgraded javax.persistence.* to jakarta.persistence.*